<resources>
    <string name="app_name">MyAddressBook_2301853962</string>
    <string name="address_book">Address Book</string>
    <string name="search_employee">Search Employee</string>
    <string name="name">Name</string>
    <string name="city_pholder">City : City, Country</string>
    <string name="phone_pholder">Phone : 081212316754 / 01237123124</string>
    <string name="member_since_pholder">Member Since : Month 2022</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_address_book">My Address Book</string>
    <string name="email_pholder">Email : email@example.com</string>
    <string name="add_to_my_address_book">Add to My Address Book</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found</string>
</resources>