<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/img_employee"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/person_placeholder"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/tv_emp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_toEndOf="@id/img_employee"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_pholder"
        android:layout_toEndOf="@id/img_employee"
        android:layout_below="@id/tv_emp_name"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_pholder"
        android:layout_toEndOf="@id/img_employee"
        android:layout_below="@id/tv_city"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_member_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_since_pholder"
        android:layout_toEndOf="@id/img_employee"
        android:layout_below="@id/tv_phone"/>

</RelativeLayout>