<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <ImageView
        android:id="@+id/img_employee"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/person_placeholder"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tv_emp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_toEndOf="@id/img_employee"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_pholder"
        android:layout_toEndOf="@id/img_employee"
        android:layout_below="@id/tv_emp_name"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_employee"
        android:layout_below="@id/tv_city"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textAllCaps="false"
            android:layout_marginEnd="8dp"
            android:layout_weight=".5"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="false"
            android:layout_weight=".5"/>
    </LinearLayout>

</RelativeLayout>